--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,10 @@
 <%include layout %>
 <body>
+	<div>
+		<p>To search </p><code>https://morning-shore-83375.herokuapp.com/api/search/lolcats%20funny?offset=10 </code>
+		 <br>
+		<p>To find the latest search result</p><code>https://morning-shore-83375.herokuapp.com/api/latest</code>
+	</div>
 	<div class="jumbotron">
 		<form method="post" action="/search">
 			<input type="text" name="search" class="form-control">
