Some more changes in placeholder

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,8 +7,8 @@
 	</div>
 	<div class="jumbotron">
 		<form method="post" action="/search">
-			<input type="text" name="search" class="form-control">
-			<input type="text" name="page" class="form-control">
+			<input type="text" name="search" class="form-control" placeholder="Query">
+			<input type="text" name="page" class="form-control" placeholder="Offset">
 			<input type="submit">
 		</form>
 	</div>
